Fixed tagline issues on mobile phones

--- a/src/style.css
+++ b/src/style.css
@@ -359,7 +359,7 @@ body {
     width: 0;
   }
   to {
-    width: 320px; 
+    width: 25ch; 
   }
 }
 
